--- a/styleDATAVIZ.css
+++ b/styleDATAVIZ.css
@@ -510,8 +510,12 @@ body::before {
 .pied-de-page {
     text-align: center;
     padding: 3rem 2rem;
+    max-width: 550px;
+    margin: 4rem auto 2rem auto;
+    width: 90%;
+    border-radius: 12px;
     margin-top: 4rem;
-    border-top: 2px solid var(--spotify-gris);
+    border-bottom: 2px solid var(--spotify-vert-eclat);
     background: var(--spotify-sombre);
 }
 
@@ -522,12 +526,12 @@ body::before {
 }
 
 .note-pied-de-page {
-    font-size: 0.75rem;
+    font-size: 0.5rem;
     opacity: 0.7;
 }
 
 .credits-pied-de-page {
-    margin-top: 1rem;
+    margin-top: 0.5rem;
     font-size: 0.75rem;
     color: var(--spotify-vert);
 }
